--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
+    "tailwindcss": "^1.9.4",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
