--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "axe-core": "^4.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -39,6 +40,7 @@
     "lint-staged": "^9.5.0",
     "tailwindcss": "^1.9.4",
     "typescript": "~3.9.3",
+    "vue-axe": "^2.4.1",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
