--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,6 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
 
-[*.{js,jsx,ts,tsx,vue}]
+[*.{js,ts,json,vue}]
 indent_style = space
 indent_size = 2
