--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@zhuowenli/vue-feather-icons": "^5.0.2",
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.2"
