--- a/package.json
+++ b/package.json
@@ -3,30 +3,32 @@
   "license": "MIT",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@zhuowenli/vue-feather-icons": "^5.0.2",
-    "tailwindcss": "^1.9.6",
-    "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.2"
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "autoprefixer": "^10.0.4",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.13.0",
-    "eslint-config-standard": "^16.0.1",
+    "eslint": "^7.14.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.2",
-    "eslint-plugin-vue": "^7.1.0",
-    "typescript": "^4.0.5",
-    "vite": "^1.0.0-rc.8"
+    "eslint-plugin-react": "^7.21.5",
+    "postcss": "^8.1.10",
+    "tailwindcss": "^2.0.1",
+    "typescript": "^4.1.2"
   },
   "config": {
     "commitizen": {
