--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@types/classnames": "^2.2.11",
+    "classnames": "^2.2.6",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
