--- a/package.json
+++ b/package.json
@@ -6,30 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore ."
   },
   "dependencies": {
-    "next": "^10.1.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "next": "^10.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.0",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "autoprefixer": "^10.0.4",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.14.0",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "autoprefixer": "^10.2.5",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.23.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.5",
-    "postcss": "^8.1.10",
-    "tailwindcss": "^2.1.0",
-    "typescript": "^4.1.2"
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "postcss": "^8.2.9",
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.2.4"
   },
   "config": {
     "commitizen": {
