refactor(yarn): use yarn v2

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 
 ### Node ###
 
+# Yarn Berry
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
 # Logs
 logs
 *.log
