--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@junodevs/hosting-website",
+  "name": "@junodevs/junohosting.net",
   "license": "MIT",
   "version": "0.0.0",
   "scripts": {
@@ -21,12 +21,12 @@
     "@typescript-eslint/parser": "^4.21.0",
     "autoprefixer": "^10.2.5",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.2.9",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.2.4"
