--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
